@@ -1,5 +1,12 @@
 # -*- coding: utf-8 -*-
 
+2008-03-13  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/uninstall_command.rb:  Add --user-install to
+	  allow uninstallation from ~/.gem.  Bug #23760 by Roger Pack.
+	* lib/rubygems/uninstaller.rb:  Automatically uninstall from
+	  Gem.user_dir.
+
 2008-03-12  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/specification.rb:  #description no longer removes
@@ -8,7 +15,6 @@
 	  lines to 78 characters for prettier display.
 	* lib/rubygems/commands/setup_command.rb:  Clarify RubyGems RDoc
 	  installation location.  Bug #22656 by Gian Marco Gherardi.
-	  
 
 2008-03-09  Eric Hodel  <drbrain@segment7.net>
 
